<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp" >

    <TextView
        android:id="@+id/AppName"
        style="@style/BannerTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >
	<ScrollView
	    android:layout_width="0dip"
	    android:layout_height="wrap_content"
	    android:layout_weight="1" >
	    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="60dp" >
			
			<EditText
                android:id="@+id/etFullName"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/fullName"
                android:inputType="textCapWords" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etCompanyName"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:hint="@string/company" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bRegister"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />
            
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>